--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ and if you know aku pernah nulis tentang kamu di suatu website
             lagu yang buat aku dejavu tentang kamu
         </summary>
         <a href="about you.html"alt="about you"> 
-            <li>lagu</li>
+            <li>ABOUT YOU</li>
         </a>
     </details>
     
